# RustyPHP

./: .gitignore  Cargo.toml  EXECUTION_PLAN.md  MIGRATION.md  NOTICE  PERFORMANCE_RESULTS.md  README.md  ROADMAP.md  TRADEMARKS.md  basic.php  comprehensive_test.php  intermediate.php  rustyphp.sh  test_basic.php
.github/: FUNDING.yml  copilot-instructions.md
crates/php-cli/: Cargo.toml
crates/php-cli/src/: lib.rs
crates/php-cli/tests/: integration_tests.rs
crates/php-ffi/: Cargo.toml
crates/php-ffi/src/: lib.rs
crates/php-ffi/tests/: integration_tests.rs
crates/php-lexer/: Cargo.toml
crates/php-lexer/src/: debug_test.rs  error.rs  lib.rs  stream.rs  token.rs
crates/php-lexer/src/lexer/: comments.rs  keywords.rs  literals.rs  main.rs  mod.rs  operators.rs
crates/php-lexer/tests/: integration_tests.rs
crates/php-parser/: Cargo.toml
crates/php-parser/src/: error.rs  lib.rs
crates/php-parser/src/ast/: expr.rs  mod.rs  operator.rs  stmt.rs
crates/php-parser/src/parser/: control_flow.rs  expressions.rs  main.rs  mod.rs  statements.rs  tests.rs  utils.rs
crates/php-parser/tests/: integration_tests.rs
crates/php-runtime/: Cargo.toml
crates/php-runtime/src/: engine.rs  lib.rs  optimized_engine.rs
crates/php-runtime/tests/: integration_tests.rs
crates/php-stdlib/: Cargo.toml
crates/php-stdlib/src/: lib.rs
crates/php-stdlib/tests/: integration_tests.rs
crates/php-types/: Cargo.toml
crates/php-types/src/: array.rs  conversion.rs  lib.rs  object.rs  value.rs
crates/php-types/tests/: integration_tests.rs
crates/php-web/: Cargo.toml
crates/php-web/src/: high_performance.rs  high_performance_handlers.rs  lib.rs
crates/php-web/src/playground/: handlers.rs  mod.rs  routes.rs
crates/php-web/src/playground/templates/: index.html
crates/php-web/tests/: execute_endpoint.rs  integration_tests.rs
docs/: HIGH_PERFORMANCE_GUIDE.md  architecture.md  php_compatibility.md
scripts/: benchmark.sh  benchmark_arithmetic.lua  benchmark_complex.lua  benchmark_payload.lua  benchmark_variables.lua  performance_benchmark.sh  resolve_conflicts.sh  resolve_title_conflict.sh  setup_workspace.sh  test_all.sh  test_runner.sh
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
src/playground/: handlers.rs  mod.rs
tests/: README.md
tests/debug/: debug_comment_test.php  debug_string_test.php  debug_string_with_colon.php
tests/php_files/: arithmetic.php  arrays.php  basic.php  progress_test.php  test.php  test_simple.php
tests/php_files/lexer/: minimal_comment_test.php  multiline_comment_test.php  simple_comment_test.php
tests/php_files/parser/: simple_modular_test.php  test_constants.php  test_modular.php
