[package]
name = "php-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = ""

[dependencies]
# Add crate-specific dependencies here
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
php-types = { path = "../php-types" }
php-parser = { path = "../php-parser" }
regex.workspace = true

