[package]
name = "php-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = ""

[dependencies]
# Add crate-specific dependencies here
serde.workspace = true
thiserror.workspace = true

