[package]
name = "php-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PHP type system and value representations"

[dependencies]
serde.workspace = true
thiserror.workspace = true
